--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -18,12 +18,14 @@
         tools:context="smarthouse.smartronic.Rooms">
 
         <LinearLayout
+            android:id="@+id/deviceCategories"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
             android:layout_centerVertical="true"
-            android:background="@drawable/rounded_layout"></LinearLayout>
+            android:background="@drawable/rounded_layout"
+            android:orientation="horizontal"></LinearLayout>
 
     </RelativeLayout>
 
